data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1609.wast
;; 10. **Test Description:**     - Integrate `br_table` into `if` conditional blocks surrounded by `unreachable` to identify consistent trap enforcement within conditional logic altering control flow.     - **Constraint:** Asserts `unreachable` enforces traps, halting subsequent conditional and `br_table` evaluations.     - **Relation to Edge Case:** Focuses on control flow consistency when conditional and `unreachable` overlap.

(assert_invalid
  (module (func $test-unreachable-with-br-table
    (block
      (unreachable)
      (if (i32.const 1)
        (br_table 0 (block (nop)))
      )
    )
  ))
  "type mismatch"
)